--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   "license": "ISC",
   "dependencies": {
     "browser-sync": "^2.26.7",
+    "del": "^5.1.0",
     "font-awesome": "^4.7.0",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-csso": "^4.0.1",
+    "gulp-plumber": "^1.2.1",
     "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
     "i": "^0.3.6",
-    "jquery": "^1.9.1",
+    "jquery": "^1.12.4",
     "node-sass": "^4.13.0",
     "npm": "^6.13.0",
     "popper.js": "^1.16.0"
